# Jadeui

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: README.md
examples/backdrop_demo/: README.md  app.py
examples/backdrop_demo/web/: index.html
examples/calculator/: README.md  app.py
examples/calculator/web/: index.html
examples/custom_template/: README.md  app.py
examples/custom_template/web/: index.html
examples/custom_template/web/css/: custom.css  jadeui.css
examples/custom_template/web/pages/: contact.html  home.html  products.html
examples/dialog_notification_demo/: README.md  app.py
examples/dialog_notification_demo/web/: index.html
examples/fullscreen_demo/: app.py
examples/fullscreen_demo/web/: index.html
examples/ipc_demo/: app.py
examples/ipc_demo/web/: index.html
examples/router_demo/: README.md  app.py
examples/router_demo/web/: _app.html
examples/router_demo/web/css/: jadeui.css
examples/router_demo/web/pages/: about.html  dashboard.html  home.html  settings.html  user.html  users.html
examples/simple/: README.md  app.py
examples/simple/web/: index.html
examples/vue_app/: README.md  app.py
examples/vue_app/frontend/: index.html  package-lock.json  package.json  vite.config.js
examples/vue_app/frontend/src/: App.vue  main.js
examples/vue_app/frontend/src/views/: About.vue  Home.vue
examples/vue_app/web/: index.html
examples/vue_app/web/assets/: index-CIkzhFha.js  index-ofSZQwgb.css
jadeui/: __init__.py  app.py  dialog.py  downloader.py  events.py  exceptions.py  ipc.py  notification.py  router.py  server.py  utils.py  window.py
jadeui/core/: __init__.py  dll.py  lifecycle.py  types.py
jadeui/templates/: __init__.py
scripts/: build.py  build_wheels.py
